--- a/Wiki/NES/Dragon_Warrior/ROM_Map.wikitext
+++ b/Wiki/NES/Dragon_Warrior/ROM_Map.wikitext
@@ -4,7 +4,7 @@
 
 This ROM map is based on the complete disassembly by TheAnsarya and documented memory locations from the Dragon Warrior Info Project.
 
-Addresses are NES CPU addresses ($8000-$FFFF for PRG ROM, $0000-$1FFF for CHR ROM).
+Addresses are NES CPU addresses ($8000-$ffff for PRG ROM, $0000-$1fff for CHR ROM).
 
 ==Bank Structure==
 
@@ -13,135 +13,135 @@ Dragon Warrior uses MMC1 mapper with 4 banks of 16KB PRG ROM:
 {| class="wikitable"
 !  Bank  !!  CPU Address  !!  File Offset  !!  Description
 |-
-|  Bank 00  ||  $8000-$BFFF  ||  $00010-$04010  ||  Main game code, graphics tables, shop data
+|  Bank 00  ||  $8000-$bfff  ||  $00010-$04010  ||  Main game code, graphics tables, shop data
 |-
-|  Bank 01  ||  $8000-$BFFF  ||  $04010-$08010  ||  Monster data, music, player stats
+|  Bank 01  ||  $8000-$bfff  ||  $04010-$08010  ||  Monster data, music, player stats
 |-
-|  Bank 02  ||  $8000-$BFFF  ||  $08010-$0C010  ||  Text compression, dialog data
+|  Bank 02  ||  $8000-$bfff  ||  $08010-$0c010  ||  Text compression, dialog data
 |-
-|  Bank 03  ||  $C000-$FFFF  ||  $0C010-$10010  ||  Fixed bank, core gameplay systems
+|  Bank 03  ||  $c000-$ffff  ||  $0c010-$10010  ||  Fixed bank, core gameplay systems
 |}
 
 ==PRG ROM Map==
 
-===Bank 00 ($8000-$BFFF)===
+===Bank 00 ($8000-$bfff)===
 
 {| class="wikitable sortable"
 !  Address  !!  Size  !!  Category  !!  Description
 |-
-|  $8000-$801F  ||  32 bytes  ||  Vectors  ||  Bank switching and interrupt vectors
+|  $8000-$801f  ||  32 bytes  ||  Vectors  ||  Bank switching and interrupt vectors
 |-
-|  $8020-$80FF  ||  224 bytes  ||  Code  ||  Initialization and bank switching routines
+|  $8020-$80ff  ||  224 bytes  ||  Code  ||  Initialization and bank switching routines
 |-
-|  $8100-$85FF  ||  1280 bytes  ||  Graphics  ||  Overworld map tile definitions
+|  $8100-$85ff  ||  1280 bytes  ||  Graphics  ||  Overworld map tile definitions
 |-
-|  $8600-$8AFF  ||  1280 bytes  ||  Graphics  ||  Town and dungeon tile definitions
+|  $8600-$8aff  ||  1280 bytes  ||  Graphics  ||  Town and dungeon tile definitions
 |-
-|  $8B00-$8FFF  ||  1280 bytes  ||  Graphics  ||  Menu and UI graphics data
+|  $8b00-$8fff  ||  1280 bytes  ||  Graphics  ||  Menu and UI graphics data
 |-
-|  $9000-$97FF  ||  2048 bytes  ||  Data  ||  NPC position and dialog tables
+|  $9000-$97ff  ||  2048 bytes  ||  Data  ||  NPC position and dialog tables
 |-
-|  $9800-$98FF  ||  256 bytes  ||  Data  ||  Map entry direction table
+|  $9800-$98ff  ||  256 bytes  ||  Data  ||  Map entry direction table
 |-
 |  $9900-$9946  ||  70 bytes  ||  Data  ||  Map entry direction table (continued)
 |-
 |  $9947-$9990  ||  74 bytes  ||  Data  ||  Item cost table
 |-
-|  $9991-$99CE  ||  62 bytes  ||  Data  ||  Shop items table
+|  $9991-$99ce  ||  62 bytes  ||  Data  ||  Shop items table
 |-
-|  $99CF-$99DE  ||  16 bytes  ||  Data  ||  Weapon bonus table
+|  $99cf-$99de  ||  16 bytes  ||  Data  ||  Weapon bonus table
 |-
-|  $99DF-$99EE  ||  16 bytes  ||  Data  ||  Armor bonus table
+|  $99df-$99ee  ||  16 bytes  ||  Data  ||  Armor bonus table
 |-
-|  $99EF-$99FE  ||  16 bytes  ||  Data  ||  Shield bonus table
+|  $99ef-$99fe  ||  16 bytes  ||  Data  ||  Shield bonus table
 |-
-|  $9A00-$9AFF  ||  256 bytes  ||  Data  ||  Palette and graphics pointers
+|  $9a00-$9aff  ||  256 bytes  ||  Data  ||  Palette and graphics pointers
 |-
-|  $9B00-$BFFF  ||  5376 bytes  ||  Code  ||  Main game logic and subroutines
+|  $9b00-$bfff  ||  5376 bytes  ||  Code  ||  Main game logic and subroutines
 |}
 
-===Bank 01 ($8000-$BFFF)===
+===Bank 01 ($8000-$bfff)===
 
 {| class="wikitable sortable"
 !  Address  !!  Size  !!  Category  !!  Description
 |-
-|  $8000-$803F  ||  64 bytes  ||  Vectors  ||  Bank 1 function pointers
+|  $8000-$803f  ||  64 bytes  ||  Vectors  ||  Bank 1 function pointers
 |-
-|  $8040-$81FF  ||  448 bytes  ||  Data  ||  Music note frequency table
+|  $8040-$81ff  ||  448 bytes  ||  Data  ||  Music note frequency table
 |-
-|  $8200-$8FFF  ||  3584 bytes  ||  Data  ||  Music sequence data
+|  $8200-$8fff  ||  3584 bytes  ||  Data  ||  Music sequence data
 |-
-|  $9000-$94FF  ||  1280 bytes  ||  Data  ||  Monster stat tables
+|  $9000-$94ff  ||  1280 bytes  ||  Data  ||  Monster stat tables
 |-
-|  $9500-$95FF  ||  256 bytes  ||  Data  ||  Experience tables by level
+|  $9500-$95ff  ||  256 bytes  ||  Data  ||  Experience tables by level
 |-
-|  $9600-$96FF  ||  256 bytes  ||  Data  ||  Player base stats by level
+|  $9600-$96ff  ||  256 bytes  ||  Data  ||  Player base stats by level
 |-
-|  $9700-$97FF  ||  256 bytes  ||  Data  ||  Spell data and MP costs
+|  $9700-$97ff  ||  256 bytes  ||  Data  ||  Spell data and MP costs
 |-
-|  $9800-$9FFF  ||  2048 bytes  ||  Code  ||  Battle system and stat calculation
+|  $9800-$9fff  ||  2048 bytes  ||  Code  ||  Battle system and stat calculation
 |-
-|  $A000-$BFFF  ||  8192 bytes  ||  Code  ||  Music player and sound routines
+|  $a000-$bfff  ||  8192 bytes  ||  Code  ||  Music player and sound routines
 |}
 
-===Bank 02 ($8000-$BFFF)===
+===Bank 02 ($8000-$bfff)===
 
 {| class="wikitable sortable"
 !  Address  !!  Size  !!  Category  !!  Description
 |-
-|  $8000-$8FFF  ||  4096 bytes  ||  Data  ||  Compressed text data
+|  $8000-$8fff  ||  4096 bytes  ||  Data  ||  Compressed text data
 |-
-|  $9000-$9FFF  ||  4096 bytes  ||  Data  ||  Dialog text tables and pointers
+|  $9000-$9fff  ||  4096 bytes  ||  Data  ||  Dialog text tables and pointers
 |-
-|  $A000-$AFFF  ||  4096 bytes  ||  Code  ||  Text decompression routines
+|  $a000-$afff  ||  4096 bytes  ||  Code  ||  Text decompression routines
 |-
-|  $B000-$BFFF  ||  4096 bytes  ||  Code  ||  Dialog display and text processing
+|  $b000-$bfff  ||  4096 bytes  ||  Code  ||  Dialog display and text processing
 |}
 
-===Bank 03 ($C000-$FFFF) - Fixed Bank===
+===Bank 03 ($c000-$ffff) - Fixed Bank===
 
 {| class="wikitable sortable"
 !  Address  !!  Size  !!  Category  !!  Description
 |-
-|  $C000-$CFFF  ||  4096 bytes  ||  Code  ||  Core game loop and input handling
+|  $c000-$cfff  ||  4096 bytes  ||  Code  ||  Core game loop and input handling
 |-
-|  $D000-$DFFF  ||  4096 bytes  ||  Code  ||  Map rendering and movement
+|  $d000-$dfff  ||  4096 bytes  ||  Code  ||  Map rendering and movement
 |-
-|  $E000-$EFFF  ||  4096 bytes  ||  Code  ||  Menu systems and inventory
+|  $e000-$efff  ||  4096 bytes  ||  Code  ||  Menu systems and inventory
 |-
-|  $F000-$FFEF  ||  4080 bytes  ||  Code  ||  System routines and utilities
+|  $f000-$ffef  ||  4080 bytes  ||  Code  ||  System routines and utilities
 |-
-|  $FFF0-$FFFF  ||  16 bytes  ||  Vectors  ||  NMI, Reset, and IRQ vectors
+|  $fff0-$ffff  ||  16 bytes  ||  Vectors  ||  NMI, Reset, and IRQ vectors
 |}
 
 ==CHR ROM Map==
 
-===Bank 0 ($0000-$0FFF)===
+===Bank 0 ($0000-$0fff)===
 
 {| class="wikitable sortable"
 !  Address  !!  Size  !!  Category  !!  Description
 |-
-|  $0000-$03FF  ||  1024 bytes  ||  Graphics  ||  Hero sprites and animations
+|  $0000-$03ff  ||  1024 bytes  ||  Graphics  ||  Hero sprites and animations
 |-
-|  $0400-$07FF  ||  1024 bytes  ||  Graphics  ||  Monster sprites (first 64)
+|  $0400-$07ff  ||  1024 bytes  ||  Graphics  ||  Monster sprites (first 64)
 |-
-|  $0800-$0BFF  ||  1024 bytes  ||  Graphics  ||  NPC sprites and objects
+|  $0800-$0bff  ||  1024 bytes  ||  Graphics  ||  NPC sprites and objects
 |-
-|  $0C00-$0FFF  ||  1024 bytes  ||  Graphics  ||  UI elements and text font
+|  $0c00-$0fff  ||  1024 bytes  ||  Graphics  ||  UI elements and text font
 |}
 
-===Bank 1 ($1000-$1FFF)===
+===Bank 1 ($1000-$1fff)===
 
 {| class="wikitable sortable"
 !  Address  !!  Size  !!  Category  !!  Description
 |-
-|  $1000-$13FF  ||  1024 bytes  ||  Graphics  ||  Monster sprites (continued)
+|  $1000-$13ff  ||  1024 bytes  ||  Graphics  ||  Monster sprites (continued)
 |-
-|  $1400-$17FF  ||  1024 bytes  ||  Graphics  ||  Background tiles (overworld)
+|  $1400-$17ff  ||  1024 bytes  ||  Graphics  ||  Background tiles (overworld)
 |-
-|  $1800-$1BFF  ||  1024 bytes  ||  Graphics  ||  Background tiles (dungeons/towns)
+|  $1800-$1bff  ||  1024 bytes  ||  Graphics  ||  Background tiles (dungeons/towns)
 |-
-|  $1C00-$1FFF  ||  1024 bytes  ||  Graphics  ||  Background tiles (special areas)
+|  $1c00-$1fff  ||  1024 bytes  ||  Graphics  ||  Background tiles (special areas)
 |}
 
 ==Data Tables==
@@ -155,13 +155,13 @@ Dragon Warrior uses MMC1 mapper with 4 banks of 16KB PRG ROM:
 |-
 |  $9947-$9948  ||  Herb  ||  24 GP  ||  Restores 23-30 HP
 |-
-|  $9949-$994A  ||  Magic Key  ||  53 GP  ||  Opens locked doors
+|  $9949-$994a  ||  Magic Key  ||  53 GP  ||  Opens locked doors
 |-
-|  $994B-$994C  ||  Torch  ||  8 GP  ||  Illuminates dark areas
+|  $994b-$994c  ||  Torch  ||  8 GP  ||  Illuminates dark areas
 |-
-|  $994D-$994E  ||  Fairy Water  ||  38 GP  ||  Repels weak monsters
+|  $994d-$994e  ||  Fairy Water  ||  38 GP  ||  Repels weak monsters
 |-
-|  $994F-$9950  ||  Wings  ||  70 GP  ||  Return to Tantegel
+|  $994f-$9950  ||  Wings  ||  70 GP  ||  Return to Tantegel
 |-
 |  $9951-$9952  ||  Dragon's Scale  ||  20 GP  ||  Reduces damage by 1/3
 |-
@@ -171,13 +171,13 @@ Dragon Warrior uses MMC1 mapper with 4 banks of 16KB PRG ROM:
 |-
 |  $9957-$9958  ||  Bamboo Pole  ||  10 GP  ||  +2 ATK
 |-
-|  $9959-$995A  ||  Club  ||  60 GP  ||  +4 ATK
+|  $9959-$995a  ||  Club  ||  60 GP  ||  +4 ATK
 |-
-|  $995B-$995C  ||  Copper Sword  ||  180 GP  ||  +10 ATK
+|  $995b-$995c  ||  Copper Sword  ||  180 GP  ||  +10 ATK
 |-
-|  $995D-$995E  ||  Hand Axe  ||  560 GP  ||  +15 ATK
+|  $995d-$995e  ||  Hand Axe  ||  560 GP  ||  +15 ATK
 |-
-|  $995F-$9960  ||  Broad Sword  ||  1500 GP  ||  +20 ATK
+|  $995f-$9960  ||  Broad Sword  ||  1500 GP  ||  +20 ATK
 |-
 |  $9961-$9962  ||  Flame Sword  ||  9800 GP  ||  +28 ATK
 |-
@@ -187,20 +187,20 @@ Dragon Warrior uses MMC1 mapper with 4 banks of 16KB PRG ROM:
 |-
 |  $9967-$9968  ||  Chain Mail  ||  300 GP  ||  +10 DEF
 |-
-|  $9969-$996A  ||  Half Plate  ||  1000 GP  ||  +16 DEF
+|  $9969-$996a  ||  Half Plate  ||  1000 GP  ||  +16 DEF
 |-
-|  $996B-$996C  ||  Full Plate  ||  3000 GP  ||  +24 DEF
+|  $996b-$996c  ||  Full Plate  ||  3000 GP  ||  +24 DEF
 |-
-|  $996D-$996E  ||  Magic Armor  ||  7700 GP  ||  +24 DEF, regenerates HP
+|  $996d-$996e  ||  Magic Armor  ||  7700 GP  ||  +24 DEF, regenerates HP
 |-
-|  $996F-$9970  ||  Small Shield  ||  90 GP  ||  +4 DEF
+|  $996f-$9970  ||  Small Shield  ||  90 GP  ||  +4 DEF
 |-
 |  $9971-$9972  ||  Large Shield  ||  800 GP  ||  +10 DEF
 |-
 |  $9973-$9974  ||  Silver Shield  ||  14800 GP  ||  +20 DEF, blocks breath
 |}
 
-===Monster Stats Table ($9000-$94FF)===
+===Monster Stats Table ($9000-$94ff)===
 
 1280 bytes. 40 monsters × 16 bytes per entry = 640 bytes used. Each entry:
 * +$00-$01: HP (little-endian, 16-bit)
@@ -210,10 +210,10 @@ Dragon Warrior uses MMC1 mapper with 4 banks of 16KB PRG ROM:
 * +$06-$07: Gold Reward (little-endian, 16-bit)
 * +$08: Special Abilities Flags
 * +$09: Resistance Flags
-* +$0A-$0B: Graphics Tile ID (16-bit)
-* +$0C-$0F: Reserved/Padding (4 bytes)
+* +$0a-$0b: Graphics Tile ID (16-bit)
+* +$0c-$0f: Reserved/Padding (4 bytes)
 
-===Experience Requirements Table ($9500-$95FF)===
+===Experience Requirements Table ($9500-$95ff)===
 
 256 bytes. Total experience required for each level (1-30). Each entry is 2 bytes (little-endian):
 * Level 1: 0 EXP
@@ -222,7 +222,7 @@ Dragon Warrior uses MMC1 mapper with 4 banks of 16KB PRG ROM:
 * Level 20: 28000 EXP
 * Level 30: 65535 EXP (max)
 
-===Spell Data Table ($9700-$97FF)===
+===Spell Data Table ($9700-$97ff)===
 
 256 bytes. Spell MP costs and effect parameters:
 
